--- a/index.html
+++ b/index.html
@@ -14,34 +14,20 @@
             <h2>The Three-Wheeler Service Tech</h2>
         </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#try">Try It Now</a></li>
-        </ul>
-    </nav>
     <main>
         <section id="about" class="container">
             <h3>About Triker AI</h3>
             <p>Triker AI is your ultimate tool for servicing, repairing, and upgrading three-wheelers. From troubleshooting issues to finding compatible parts, Triker AI empowers you to get the job done.</p>
         </section>
-        <section id="features" class="container">
-            <h3>Features</h3>
-            <ul>
-                <li>Step-by-step repair guides with photos</li>
-                <li>Parts compatibility checker</li>
-                <li>Expert tips for upgrades and modifications</li>
-                <li>Easy troubleshooting for common issues</li>
-            </ul>
-        </section>
         <section id="try" class="container">
             <h3>Try Triker AI Now</h3>
-            <p>Enter your query below to get started:</p>
-            <form action="#" method="POST">
-                <textarea placeholder="Type your question about three-wheelers here..." rows="5"></textarea>
-                <button type="submit">Ask Triker AI</button>
-            </form>
+            <p>Interact with Triker AI directly below:</p>
+            <iframe 
+                src="YOUR_GPT_PUBLIC_URL" 
+                width="100%" 
+                height="600px" 
+                style="border: none;">
+            </iframe>
         </section>
     </main>
     <footer>
