--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h3>Try Triker AI Now</h3>
             <p>Interact with Triker AI directly below:</p>
             <iframe 
-                src="YOUR_GPT_PUBLIC_URL" 
+                src="https://chatgpt.com/g/g-678be5c53c7c8191ad4b0b15e65a84a8-triker-ai-the-three-wheeler-service-tech" 
                 width="100%" 
                 height="600px" 
                 style="border: none;">
