--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Triker AI - The Three-Wheeler Service Tech">
     <title>Triker AI - The Three-Wheeler Service Tech</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GOOGLE_ANALYTICS_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'YOUR_GOOGLE_ANALYTICS_ID');
+    </script>
 </head>
 <body>
     <header>
@@ -21,13 +30,13 @@
         </section>
         <section id="try" class="container">
             <h3>Try Triker AI Now</h3>
-            <p>Interact with Triker AI directly below:</p>
-            <iframe 
-                src="https://chatgpt.com/g/g-678be5c53c7c8191ad4b0b15e65a84a8-triker-ai-the-three-wheeler-service-tech" 
-                width="100%" 
-                height="600px" 
-                style="border: none;">
-            </iframe>
+            <p>Click the button below to interact with Triker AI directly on OpenAI's platform:</p>
+            <a href="https://chatgpt.com/g/g-678be5c53c7c8191ad4b0b15e65a84a8-triker-ai-the-three-wheeler-service-tech" 
+               target="_blank" 
+               class="cta-button" 
+               onclick="gtag('event', 'click', { 'event_category': 'Outbound Link', 'event_label': 'Triker AI Link' });">
+                Launch Triker AI
+            </a>
         </section>
     </main>
     <footer>
